GNOME Bugzilla – Bug 771538
network: Fix compilation warnings
Last modified: 2016-09-20 08:34:43 UTC
.
Created attachment 335711 [details] [review] network: Fix compilation warnings Those come from the fixes made in commits 981c354 and 7f601cf.
Attachment 335711 [details] pushed as ab2b13c - network: Fix compilation warnings