panels/network/connection-editor/ce-page-ip4.c
@@ -686,7 +686,7 @@ ui_to_setting (CEPageIP4 *page)
                 }
         }
 
-        addresses = g_ptr_array_new_with_free_func (nm_ip_address_unref);
+        addresses = g_ptr_array_new_with_free_func ((GDestroyNotify) nm_ip_address_unref);
         if (g_str_equal (method, NM_SETTING_IP4_CONFIG_METHOD_MANUAL))
                 children = gtk_container_get_children (GTK_CONTAINER (page->address_list));
         else
@@ -794,7 +794,7 @@ ui_to_setting (CEPageIP4 *page)
                 g_ptr_array_add (dns_servers, NULL);
         }
 
-        routes = g_ptr_array_new_with_free_func (nm_ip_route_unref);
+        routes = g_ptr_array_new_with_free_func ((GDestroyNotify) nm_ip_route_unref);
         if (g_str_equal (method, NM_SETTING_IP4_CONFIG_METHOD_AUTO) ||
             g_str_equal (method, NM_SETTING_IP4_CONFIG_METHOD_MANUAL))
                 children = gtk_container_get_children (GTK_CONTAINER (page->routes_list));
